# itch-parser-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.zig  cmake_install.cmake
include/: db.h  db_ctx.h  parser.h
itch-parser-clickhouse/: build.zig
itch-parser-clickhouse/include/: db.h  parser.h  worker.h
itch-parser-clickhouse/src/: db.c  main.c  parser.c  worker.c
old_itch/: build.zig
old_itch/include/: db.h  db_ctx.h  filter.h  parser.h  ringbuffer.h  worker.h
old_itch/src/: db.c  filter.c  main.c  parser.c  ringbuffer.c  worker.c
old_itch/tests/: test_parser.c
src/: db.c  duckdb_stub.cpp  main.c  parser.c
